CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/Meter_Reader__c.object-meta.xml
<CustomObject>
    <description>Holds the meter reader resume to be presented in the web component</description>
    <label>Meter Reader</label>
    <nameField>
        <displayFormat>MR-{000000}</displayFormat>
        <label>Meter Reader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meter Readers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>