CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the customer for the meter reader</description>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Meter Readers</relationshipLabel>
    <relationshipName>Meter_Readers</relationshipName>
    <type>Lookup</type>
</CustomField>