CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/CustomerNameLgt__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameLgt__c</fullName>
    <description>Field used to show the customer salesforce id in the table</description>
    <formula>Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerNameLgt</label>
    <type>Text</type>
</CustomField>