CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hoids the meter related to the meter reader</description>
    <label>Meter</label>
    <referenceTo>Meter__c</referenceTo>
    <relationshipLabel>Meter Readers</relationshipLabel>
    <relationshipName>Meter_Readers</relationshipName>
    <type>Lookup</type>
</CustomField>