CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/MeterNameLgt__c.field-meta.xml
<CustomField>
    <fullName>MeterNameLgt__c</fullName>
    <description>Used to show the Meter Salesforce ID in the Meter Reader Table</description>
    <formula>Meter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MeterNameLgt</label>
    <type>Text</type>
</CustomField>