CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/Submited_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Submited_DateTime__c</fullName>
    <description>Holds the exact moment when the meter reader was submited</description>
    <label>Submited DateTime</label>
    <type>DateTime</type>
</CustomField>