CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the suplier for the meter reader</description>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Meter Readers</relationshipLabel>
    <relationshipName>Meter_Readers</relationshipName>
    <type>Lookup</type>
</CustomField>