CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/SupplierNameLgt__c.field-meta.xml
<CustomField>
    <fullName>SupplierNameLgt__c</fullName>
    <description>Used to show the supplier salesforce ID in the Meter Reader table</description>
    <formula>Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SupplierNameLgt</label>
    <type>Text</type>
</CustomField>