CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Meter_Reader__c/fields/Total_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumed__c</fullName>
    <description>Holds the total consumed for the client and suplied for the reads in the meter reader</description>
    <label>Total Consumed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>